mudança no diretório

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "watch-build": "onchange 'src/**' -- npm run build",
+    "watch-build": "onchange -d 5000 'src/**' -- npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build && sed -i 's|href=\"/|href=\"|g' build/index.html && sed -i 's|src=\"/|src=\"|g' build/index.html",
     "test": "react-scripts test",
