--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "brdocgen-app/build/index.html"
+    "default_popup": "build/index.html"
   },
   "content_scripts": [
     {
